--- a/css/main.sass
+++ b/css/main.sass
@@ -17,8 +17,8 @@ $font: 'Open Sans', 'Hiragino Sans GB', sans-serif
 
 // # Sidebar Background Gradient
 
-$gradient-start: #C2E987
-$gradient-end:   #309E85
+$gradient-start: #474D5C
+$gradient-end:   #F8F8F8
 
 $sidebar-bg: linear-gradient(136deg, $gradient-start, $gradient-end)
 
