去掉按钮边框

--- a/_sass/6-menu.sass
+++ b/_sass/6-menu.sass
@@ -25,15 +25,14 @@
     color: #474D5C
     overflow: hidden
     transition: transform .35s $time-function
+    font-weight: bold
     &:before
       @extend %icon-left
       float: left
       width: 50%
-      border: solid 2px #474D5C
     &:after
       @extend %icon-right
       float: left
       width: 50%
-      border: solid 2px #474D5C
   &.open > &-icons
     transform: translateX(50%)
