更改链接颜色

--- a/css/main.sass
+++ b/css/main.sass
@@ -89,8 +89,8 @@ $post-meta-color: #BCC1C4
 
 $post-title-color: #283444
 $post-text-color: #283444
-$post-link-color: lighten($post-text-color, 20%)
-$post-link-hover-color: $gradient-end
+$post-link-color: #0070C0
+$post-link-hover-color: $0070C0
 
 $post-bg: #F8F8F8
 
