--- a/css/main.sass
+++ b/css/main.sass
@@ -90,7 +90,7 @@ $post-meta-color: #BCC1C4
 $post-title-color: #283444
 $post-text-color: #283444
 $post-link-color: #0070C0
-$post-link-hover-color: $0070C0
+$post-link-hover-color: #0070C0
 
 $post-bg: #F8F8F8
 
