--- a/css/main.sass
+++ b/css/main.sass
@@ -111,7 +111,7 @@ $post-hr-color: darken($post-bg, 5%)
 
 $post-share-bg: darken($post-bg, 1%)
 $post-share-color: $post-meta-color
-$post-share-hover-color: $gradient-end
+$post-share-hover-color: $gradient-start
 
 
 // # Footer (copyright)
