修改底部链接hover样式

--- a/css/main.sass
+++ b/css/main.sass
@@ -117,7 +117,7 @@ $post-share-hover-color: $gradient-start
 // # Footer (copyright)
 
 $footer-color: $post-meta-color
-$footer-link-hover-color: $gradient-end
+$footer-link-hover-color: $gradient-start
 
 $footer-font-size: 14px
 $footer-line-height: 20px
